Fri Jun  5 18:16:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ETCL/ETCL_Interpreter.cpp:
          Prefix increment and const changes

        * ace/SString.h:
          Doxygen changes

Thu Jun  4 10:14:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.cpp:
          Only call the notify_handler_ when we have a valid pointer

Thu Jun  4 09:42:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * contrib/FaCE/CE_ARGV.h:
        * contrib/FaCE/FaCE.cpp:
          Fixed GCC 4.4 warnings

Thu Jun  4 09:12:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.h:
          Fixed MinGW compile problem

Thu Jun  4 08:56:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.inl (isatty):
          Check the return value of _open_osfhandle, if it returns -1,
          it failed and then calling _isatty with -1 will cause an
          assert of the msvc9 runtime

Wed Jun  3 07:52:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessWinCE.pm:
        * bin/PerlACE/ProcessWinCE_Unix.pm:
          If we can't find the vxtest file, log it as error but just
          continue

Mon Jun  1 08:09:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Lib_Find.cpp:
          Fixed gcc4.4 warning in a different way, broke other builds

        * ace/config-win32-borland.h:
          Changed version checks to not have to patch again for a next
          path from Embarcadero

Mon Jun  1 05:22:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Lib_Find.cpp:
          Fixed gcc4.4 warnings

Mon Jun  1 05:15:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          We new require to have update pack 3 installed

Fri May 29 16:08:32 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2740_Regression_Test.cpp:
        * tests/tests.mpc: